--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
     --section-mail-color: #757575;
     --focus-color: #EEEEEE;
     --icon-color: #AFB1B8;
+    --icon-second-color: #44454E;
 }
 html {
     box-sizing: border-box;
@@ -244,12 +245,12 @@ border: 1px solid transparent;
             /* second section */
 .fotos-item {
     display: flex;
-    /* justify-content: center; */
+    margin-bottom: 94px;
     
 }
 .fotos-icon {
     margin-right: 30px;
-    padding-bottom: 94px;
+
     width: calc(100% / 3);
     
 }
@@ -429,8 +430,13 @@ line-height: 1.9;
 }
 .link-team:hover .icon-our-team,
 .link-team:focus .icon-our-team {
-    fill: var(--logo-first-color);
+    fill: var(--logo-second-color);
 }
+.link-team:hover {
+    background-color: var(--logo-first-color);
+
+}
+
 .title-team .icon-our-team {
     width: 20px;
     height: 20px;
@@ -439,6 +445,7 @@ line-height: 1.9;
 .title-team {
     display: inline-flex;
 }
+
 
                 /* ПОстоянные клиенты */
 
@@ -517,6 +524,7 @@ margin-bottom: 5px; */
 }
 .foot {
     text-align: left;
+    display: flex;
 }
 .footer-logo {
  padding-top: 60px;
@@ -526,7 +534,43 @@ margin-bottom: 5px; */
     margin-bottom: 9px;
 }
 .footer-item:nth-child(3) {
-    padding-bottom: 60px;
+    margin-bottom: 45px;
+}
+.section-footer .title {
+color: var(--logo-second-color);
+font-size: 14px;
+font-weight: 700;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-align: left;
+margin-bottom: 20px;
+}
+.section-footer {
+   margin-top: 75px; 
+
+}
+.conteiner-three {
+    margin-right: 70px;
+}
+.footer-icon {
+text-align: center;
+}
+.link-team-footer {
+    width: 44px;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: var(--icon-second-color);
+    
+}
+.link-team-footer:hover .icon-our-team,
+.link-team-footer:focus .icon-our-team {
+ fill: var(--logo-second-color);
+}
+.link-team-footer:hover {
+    background-color:var(--logo-first-color) ;
 }
                 /* portfoloi */
 
@@ -587,24 +631,27 @@ justify-content: center;
 .info-portf {  
     padding: 20px 15px;
     text-align: left;
-    border: 2px solid var(--section-color);
+
+    
 }
 .list-portf {
     text-decoration: none;
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 94px;
     }
 
 .list-portf > .portf-item {
 margin-bottom: 30px;
 margin-right: 30px;
+width: calc((100% - 30px * 2) / 3);
+border: 1px solid var(--focus-color);
+
 }
-/* .portf-item:nth-child(3n) {
-    margin-right: 50px;
-} */
+
 .portf-item:nth-child(3n) {
     margin-right: 0;
 }
 .portf-item:nth-last-child(-n + 3) {
-    margin-bottom: 94px;
+    margin-bottom: 0;
 }
